Added function to retrieve all features
