# swagger.yml
@@ -56,6 +56,19 @@ paths:
         required: true
         schema:
           $ref: "#/definitions/EventOwner"
+    /identify:
+      post:
+        tags:
+        - "enrollment"
+        summary: "To identify a student or a eventowner"
+        responses:
+          '200':
+            description: 'OK'
+        parameters:
+        - in: "body"
+          name: "body"
+          schema:
+            $ref: "#/definitions/Identify"
 
 definitions:
   Attendee:
@@ -96,4 +109,13 @@ definitions:
           type: array
           items: 
             type: integer
+    Identify:
+      type: 'object'
+      properties:
+        features:
+          type: array
+          items:
+            type: array
+            items: 
+              type: integer
 
